# agentic-personal-ai-assistant

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md
ai-orchestration-py/: README.md  pyproject.toml
ai-orchestration-py/src/orchestrator/: __init__.py  app.py  db.py  gmail_oauth.py  llm_client.py  models.py  weather.py
ai-orchestration-py/src/orchestrator/prompts/: planner.md  system.md
ai-orchestration-py/tests/: conftest.py  test_gmail_oauth.py  test_memory.py  test_weather_advice.py
assistant-core-rs/: Cargo.toml
assistant-core-rs/src/: lib.rs  main.rs
assistant-core-rs/src/core/: mod.rs  policy.rs  scheduler.rs  tool_registry.rs  types.rs
database/: README.md  schema.sql
docs/: 01_prd_v1.md  02_system_architecture_v1.md  03_data_memory_design_v1.md  04_tool_skills_contract_v1.md  05_security_privacy_spec_v1.md  06_test_plan_v1.md
scripts/: README.md  apply_schema.sh  check_health.sh  setup_db.sh  smoke_test.sh
tools/email_event_reader/: README.md  spec.json
tools/memory_store/: README.md  spec.json
tools/weather_lookup/: README.md  spec.json
